feat(Java): Use Java 11